Corrected height spacing of the navbar.

--- a/client/src/components/Nav/Nav.css
+++ b/client/src/components/Nav/Nav.css
@@ -32,7 +32,7 @@
 		text-align: center;
 	}
 	.navbar-brand {
-		height: 150px;
+		height: 125px;
 	}
 	.navbar {
 		background-color: transparent;
